<resources>

    <string name="app_name">InstantMessaging</string>

    <string name="action_search">查找</string>
    <string name="action_add">添加</string>
    <string name="menu_group_chat">发起群聊</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_addfriend">添加朋友</string>
    <string name="menu_scan">扫一扫</string>
    <string name="menu_info">信息</string>

    <string name="tab_conversation">会话</string>
    <string name="tab_contact">通讯录</string>
    <string name="tab_setting">设置</string>

    <string name="press_say">按住说话</string>
    <string name="send">发送</string>
    <string name="site">位置</string>
    <string name="picture">照片</string>

    <string name="apply_and_notification">申请与通知</string>
    <string name="group_chat">群聊</string>
    <string name="chat_room">聊天室</string>
    <string name="huanxin_helper">环信小助手</string>
    <string name="logout_this_user">退出当前帐号</string>

    <string name="login">登录</string>
    <string name="register">没有帐号？点击注册</string>

    <!--测试数据-->
    <string-array name="array_name">
        <item>鸣人</item>
        <item>佐助</item>
        <item>小樱</item>
        <item>鹿丸</item>
        <item>丁次</item>
        <item>井野</item>
        <item>雏田</item>
        <item>牙</item>
        <item>志乃</item>
        <item>#志乃</item>
        <item>12志乃</item>
        <item>卡卡西</item>
        <item>凯</item>
        <item>天天</item>
        <item>宁次</item>
        <item>小李</item>
        <item>我爱罗</item>
        <item>勘九郎</item>
        <item>大蛇丸</item>
    </string-array>

    <string name="Version_number_is_wrong">Version number is wrong</string>
    <string name="network_anomaly">世界上最遥远的距离就是没网。检查设置</string>
</resources>
