<?xml version="1.0" encoding="utf-8"?>
<cn.dreamtobe.kpswitch.widget.CustomRootLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_layout"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/content_ryv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:background="@color/chatting_list_background"
        android:fadeScrollbars="false"
        android:scrollbars="vertical"/>

    <LinearLayout
        android:id="@+id/sendMsgLayout"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="#fefefe"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/voice_text_switch_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:src="@drawable/conversation_setmoed_voice_selector"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1.0"
            >

            <FrameLayout
                android:id="@+id/conversation_fl_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/chatting_send_edt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/chattting_edit_bg"
                    android:gravity="center_vertical|left"
                    android:minHeight="38dp"
                    android:padding="5dp"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:visibility="visible"/>

                <ImageView
                    android:id="@+id/conversation_iv_face"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="7dp"
                    android:src="@drawable/conversation_biaoqing_selector"/>

            </FrameLayout>

            <TextView
                android:id="@+id/chatting_send_voice_btn"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:background="@drawable/conversation_send_bg_selector"
                android:clickable="true"
                android:gravity="center"
                android:soundEffectsEnabled="true"
                android:text="@string/press_say"
                android:textColor="#b3b3b3"
                android:textSize="16sp"
                android:visibility="gone"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/plus_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:src="@drawable/conversation_type_selector"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/chatting_send_tv"
                android:layout_width="50dp"
                android:layout_height="34dp"
                android:layout_centerInParent="true"
                android:background="@drawable/conversation_send_bg_selector"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/send"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:visibility="gone"/>

        </RelativeLayout>
    </LinearLayout>

    <cn.dreamtobe.kpswitch.widget.PanelLayout
        android:id="@+id/panel_root"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/panel_height"
        android:background="#fffefefe"
        android:orientation="vertical"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#d5d3d5"/>

        <LinearLayout
            android:id="@+id/chatting_ll_plus_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClickPhoto"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/send_img_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/chatting_pic_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:text="@string/picture"
                    android:textColor="#b3b3b3"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/send_site_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/chatting_site_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:text="@string/site"
                    android:textColor="#b3b3b3"
                    android:textSize="14sp"/>

            </LinearLayout>
        </LinearLayout>

        <include
            android:id="@+id/chatting_ll_face_container"
            layout="@layout/include_face_container"/>

    </cn.dreamtobe.kpswitch.widget.PanelLayout>

</cn.dreamtobe.kpswitch.widget.CustomRootLayout>